# PiliPili_Bot

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/infrastructure/api/: emby_api.rs
src/infrastructure/config/: config.rs  config.template  emby.rs  mod.rs
src/infrastructure/database/: adapter.rs  bindable.rs  config.rs  connection.rs  crud.rs  database_adapter.rs  entity.rs  macros.rs  migration.rs  mod.rs  repository.rs  schema.rs  transaction.rs
src/infrastructure/logger/: builder.rs  display_options.rs  format.rs  internal_logger.rs  level.rs  logger.rs  macros.rs  mod.rs  rotation.rs  writer.rs
src/infrastructure/network/: api.rs  curl_logger_plugin.rs  curl_plugin.rs  http_method.rs  mod.rs  network_macro.rs  plugin.rs  provider.rs  response.rs  target.rs  task.rs
src/logger/: internal_logger.rs  level.rs  logger.rs
tests/: config_tests.rs  databse_tests.rs  emby_tests.rs  logger_tests.rs  network_test.rs
