[package]
name = "pilipili_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4"
colored = "3.0.0"
once_cell = "1.19.0"
reqwest = { version = "0.12.12", default-features = false, features = [
    "http2",
    "rustls-tls",
    "rustls-tls-native-roots",
    "json",
    "gzip",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1", features = ["full"] }