[package]
name = "pilipili_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.87"
chrono = "0.4"
once_cell = "1.19.0"
reqwest = { version = "0.12.12", default-features = false, features = [
    "http2",
    "rustls-tls",
    "rustls-tls-native-roots",
    "json",
    "gzip",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = [
    "sqlite",
    "runtime-tokio-native-tls",
    "macros",
    "postgres"
] }
time = { version = "0.3.39", features = ["macros", "local-offset"] }
tokio = { version = "1", features = ["full"] }
toml = "0.8.20"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = [
    "std",
    "fmt",
    "env-filter",
    "tracing-log",
    "time",
    "local-time",
    "json"
] }