[package]
name = "pilipili_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.87"
chrono = "0.4"
fast_log = "1.7.6"
log = "0.4.26"
once_cell = "1.21.1"
rbs = { version = "4.5.25"}
rbatis = { version = "4.5.50"}
rbdc-mysql = { version = "4.5.17", optional = true }
rbdc-sqlite = { version = "4.5.7", optional = true }
rbdc-pg = { version = "4.5.17", optional = true }
refinery = "0.8.16"
reqwest = { version = "0.12.14", default-features = false, features = [
    "gzip",
    "http2",
    "json",
    "rustls-tls",
    "rustls-tls-native-roots",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
time = { version = "0.3.39", features = ["macros", "local-offset"] }
tokio = { version = "1.44.1", features = ["full"] }
toml = "0.8.20"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = [
    "std",
    "fmt",
    "env-filter",
    "tracing-log",
    "time",
    "local-time",
    "json"
] }